test_regress/t/t_property_unsup.out
%Error-UNSUPPORTED: t/t_property_unsup.v:65:41: Unsupported: eventually[] (in property expression)
   65 |   assert property (counter == 1 implies eventually[1: 2] counter == 3);
      |                                         ^~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_unsup.v:80:20: Unsupported: eventually[] (in property expression)
   80 |   assert property (eventually[0: 2] counter == 3);
      |                    ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:90:21: Unsupported: always (in property expression)
   90 |   assert property ((always a) implies (always a));
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:90:40: Unsupported: always (in property expression)
   90 |   assert property ((always a) implies (always a));
      |                                        ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:92:26: Unsupported: always (in property expression)
   92 |   assert property ((a or(always b)) implies (a or(always b)));
      |                          ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:92:51: Unsupported: always (in property expression)
   92 |   assert property ((a or(always b)) implies (a or(always b)));
      |                                                   ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:94:21: Unsupported: eventually[] (in property expression)
   94 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:94:50: Unsupported: eventually[] (in property expression)
   94 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                                                  ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:96:21: Unsupported: s_eventually (in property expression)
   96 |   assert property ((s_eventually a) implies (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:96:46: Unsupported: s_eventually (in property expression)
   96 |   assert property ((s_eventually a) implies (s_eventually a));
      |                                              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:98:23: Unsupported: s_until (in property expression)
   98 |   assert property ((a s_until b) implies (a s_until b));
      |                       ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:98:45: Unsupported: s_until (in property expression)
   98 |   assert property ((a s_until b) implies (a s_until b));
      |                                             ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:100:23: Unsupported: until_with (in property expression)
  100 |   assert property ((a until_with b) implies (a until_with b));
      |                       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:100:48: Unsupported: until_with (in property expression)
  100 |   assert property ((a until_with b) implies (a until_with b));
      |                                                ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:102:23: Unsupported: s_until_with (in property expression)
  102 |   assert property ((a s_until_with b) implies (a s_until_with b));
      |                       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:102:50: Unsupported: s_until_with (in property expression)
  102 |   assert property ((a s_until_with b) implies (a s_until_with b));
      |                                                  ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:106:23: Unsupported: #-# (in property expression)
  106 |   assert property ((a #-# b) implies (a #-# b));
      |                       ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:106:41: Unsupported: #-# (in property expression)
  106 |   assert property ((a #-# b) implies (a #-# b));
      |                                         ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:116:21: Unsupported: always (in property expression)
  116 |   assert property ((always a) iff (always a));
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:116:36: Unsupported: always (in property expression)
  116 |   assert property ((always a) iff (always a));
      |                                    ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:118:21: Unsupported: eventually[] (in property expression)
  118 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:118:46: Unsupported: eventually[] (in property expression)
  118 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                                              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:120:21: Unsupported: s_eventually (in property expression)
  120 |   assert property ((s_eventually a) iff (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:120:42: Unsupported: s_eventually (in property expression)
  120 |   assert property ((s_eventually a) iff (s_eventually a));
      |                                          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:122:23: Unsupported: s_until (in property expression)
  122 |   assert property ((a s_until b) iff (a s_until b));
      |                       ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:122:41: Unsupported: s_until (in property expression)
  122 |   assert property ((a s_until b) iff (a s_until b));
      |                                         ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:124:23: Unsupported: until_with (in property expression)
  124 |   assert property ((a until_with b) iff (a until_with b));
      |                       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:124:44: Unsupported: until_with (in property expression)
  124 |   assert property ((a until_with b) iff (a until_with b));
      |                                            ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:126:23: Unsupported: s_until_with (in property expression)
  126 |   assert property ((a s_until_with b) iff (a s_until_with b));
      |                       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:126:46: Unsupported: s_until_with (in property expression)
  126 |   assert property ((a s_until_with b) iff (a s_until_with b));
      |                                              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:130:23: Unsupported: #-# (in property expression)
  130 |   assert property ((a #-# b) iff (a #-# b));
      |                       ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:130:37: Unsupported: #-# (in property expression)
  130 |   assert property ((a #-# b) iff (a #-# b));
      |                                     ^~~
%Error: Exiting due to
